--- a/Mind_Bliss/client/src/login.css
+++ b/Mind_Bliss/client/src/login.css
@@ -92,7 +92,7 @@
 
 .toggle-icon {
   position: absolute;
-  right: 12px;
+  right: 40px;
   cursor: pointer;
   font-size: 20px;
   color: #5A2013;
